@@ -26,6 +26,9 @@
 	of anything.
 	* view.c (display): Renamed frame_shift to left or top, whatever
 	is more appropriate.
+	* view.c (view_set_datasource_string): Removed call to
+	view_close_datasource() for consistency with the other
+	view_set_datasource_*() functions. Adjusted the callers.
 
 2005-04-16  Roland Illig  <roland.illig@gmx.de>
 
